document auth and move item schema
