# controllers/auth.controller.ts
@@ -12,18 +12,19 @@ import DatabaseErrors from "../error/errors/database.errors";
 import AuthErrors from "../error/errors/auth.errors";
 
 /**
- * Login a user, generating a new refresh token and 1 hr JWT.
+ * Login a user with an email/phone number and password.
  */
 export const login = catchAsync(async (req, res, next) => {
   const emailOrPhone = req.body.emailOrPhone;
   const password = req.body.password;
 
   if (!emailOrPhone || !password) {
-    return next(DatabaseErrors.INVALID_FIELD());
+    return next(
+      DatabaseErrors.INVALID_FIELD("Must provide an email and password")
+    );
   }
 
   const user = await UserModel.findByEmailOrPhone(emailOrPhone);
-
   if (!user) {
     return next(AuthErrors.USER_NOT_FOUND);
   }
@@ -35,7 +36,7 @@ export const login = catchAsync(async (req, res, next) => {
     if (user.mfaEnabled) {
       if (!req.body.code) {
         const verifyCode = await user.getVerificationCode("2FA");
-        sendSMS(user.phone, MFATemplate(verifyCode));
+        await sendSMS(user.phone, MFATemplate(verifyCode));
         return next(AuthErrors.MFA_NO_TOKEN);
       } else {
         await user.verifyCode(req.body.code, "2FA");
@@ -50,10 +51,16 @@ export const login = catchAsync(async (req, res, next) => {
 });
 
 /**
- * Register a new user and log them in.
+ * Register a user with an email/phone number, name, and password. Signs this
+ * user in after registration.
  */
 export const register = catchAsync(async (req, res, next) => {
-  const { emailOrPhone, ...userData } = req.body;
+  const { emailOrPhone, name, password } = req.body;
+
+  const userData: any = {
+    name: name,
+    password: password,
+  };
 
   if (!emailOrPhone) {
     return next(DatabaseErrors.INVALID_FIELD());
@@ -74,7 +81,7 @@ export const register = catchAsync(async (req, res, next) => {
 });
 
 /**
- * Refresh a user's tokens using their access and refresh tokens.
+ * Generate new access and refresh tokens based on the provided ones.
  */
 export const refreshToken = catchAsync(async (req, res, next) => {
   if (!req.body.refreshToken) {
@@ -97,33 +104,7 @@ export const refreshToken = catchAsync(async (req, res, next) => {
 });
 
 /**
- * Reset a user's password. Returns new access/refresh tokens.
- */
-export const resetPassword = catchAsync(async (req, res, next) => {
-  if (!req.body.password) {
-    return next(DatabaseErrors.INVALID_FIELD("Must provide new password"));
-  }
-
-  const emailOrPhone = req.params.emailOrPhone;
-  const resetCode = (req.query.code as string) ?? "";
-  const password = req.body.password;
-
-  const user = await UserModel.findByEmailOrPhone(emailOrPhone);
-
-  if (!user) {
-    return next(AuthErrors.USER_NOT_FOUND);
-  }
-
-  const tokens = await user.resetPassword(resetCode, password);
-
-  res.status(200).json({
-    message: `Password updated successfully`,
-    ...tokens,
-  });
-});
-
-/**
- * Set a user's password reset code and notify them by email or text
+ * Send a password reset code to the provided email or phone number.
  */
 export const forgotPassword = catchAsync(async (req, res, next) => {
   const emailOrPhone = req.params.emailOrPhone;
@@ -143,5 +124,31 @@ export const forgotPassword = catchAsync(async (req, res, next) => {
 
   res.status(200).json({
     message: `Password reset code sent to ${emailOrPhone}`,
+  });
+});
+
+/**
+ * Reset a user's password. Returns new access/refresh tokens.
+ */
+export const resetPassword = catchAsync(async (req, res, next) => {
+  if (!req.body.password) {
+    return next(DatabaseErrors.INVALID_FIELD("Must provide new password"));
+  }
+
+  const emailOrPhone = req.params.emailOrPhone;
+  const resetCode = req.body.code;
+  const password = req.body.password;
+
+  const user = await UserModel.findByEmailOrPhone(emailOrPhone);
+
+  if (!user) {
+    return next(AuthErrors.USER_NOT_FOUND);
+  }
+
+  const tokens = await user.resetPassword(resetCode, password);
+
+  res.status(200).json({
+    message: `Password updated successfully`,
+    ...tokens,
   });
 });
